# zynq_pov

./: .gitignore  AUTONOMOUS_RUN_2026-04-25_to_27.md  DEBUG_LOG_2026-04-22.md  DEBUG_LOG_2026-04-23.md  DEBUG_LOG_2026-04-25.md  DEBUG_LOG_2026-04-27.md  HOWTO.md  HOWTO_RESUME.md  PROGRESS_HOURLY.md  STATUS_2026-04-23_EOD.md  anime_to_bin.py  extract_anime.py  extract_db.py  extract_frames.py  extract_new.py  extract_slice.py  extract_v3.py  extract_v4.py  extract_v5.py  extract_v6.py  extract_v7.py
02_hello_zynq/: 02_hello_zynq.xpr
docs/: ADR-001-voxel-vs-mesh-product-path.md  LED_PANEL_BRINGUP_CHECKLIST.md  NEW_MACHINE_SETUP.md  PROJECT_PLAN_2026-05-06.html  REMAINING_TASKS.md  capacity_analysis.html  wifi_protocol.md
esp32_bridge/: HOWTO.md  README.md
esp32_bridge/firmware/main/: CMakeLists.txt  Kconfig.projbuild  gpio_check.c  pov_bridge.c  pov_bridge_sdio.c
hls_proj/: README.md  cos_sin_lut.h  mesh_slice.cpp  mesh_slice.h  mesh_slice_lut.h  mesh_slice_tb.cpp  pov_project.cpp  pov_project.h  run_csim_only.tcl  run_hls.tcl  run_hls_v2.tcl  run_mesh_slice_csim.tcl  run_mesh_slice_synth.tcl  run_voxel_slice_synth.tcl  synth.bat  testbench.cpp
host/: anim_loader.py  anime_stream.py  auto_test_stage2.py  check_libs.py  check_open3d.py  check_pil.py  check_tk.py  color_test.py  glb_test.py  glb_to_mesh.py  glb_to_points.py  inspect_glb.py  inspect_mesh.py  list_ports.py  mesh_proto.py  mesh_slice.py  mesh_to_points.py  pointcloud_proto.py  pointcloud_stream.py  pov_gui.bat  pov_gui.py  preview_sent_mesh.py  quick_read.py  readfps.py  readfps_long.py  send_slice.py  (+22 more)
(+214 files in other folders)
